--- a/rapport/pnas-sample.bib
+++ b/rapport/pnas-sample.bib
@@ -48,3 +48,14 @@ series = {WebSci '12}
 	keywords = {Science, Humanities and Social Sciences, multidisciplinary, Science, multidisciplinary},
 	pages = {440--442},
 }
+
+@article{borgatti2005centrality,
+  title={Centrality and network flow},
+  author={Borgatti, Stephen P},
+  journal={Social networks},
+  volume={27},
+  number={1},
+  pages={55--71},
+  year={2005},
+  publisher={Elsevier}
+}
