--- a/rapport/pnas-sample.bib
+++ b/rapport/pnas-sample.bib
@@ -60,4 +60,13 @@ series = {WebSci '12}
   publisher={Elsevier}
 }
 
-
+@article{uzzi2007small,
+  title={Small-world networks and management science research: A review},
+  author={Uzzi, Brian and Amaral, Luis AN and Reed-Tsochas, Felix},
+  journal={European Management Review},
+  volume={4},
+  number={2},
+  pages={77--91},
+  year={2007},
+  publisher={Wiley Online Library}
+}
