--- a/rapport/rapport.Rmd
+++ b/rapport/rapport.Rmd
@@ -19,7 +19,7 @@ address:
     address: Université de Sherbrooke, Départment de biologie, 2500 Boulevard de l'Université, Sherbrooke, Québec, J1K 2R1
 
 abstract: |
-  Dans cette articles, le réseau de collaboration des étudiants du cours BIO500 à l'hiver 2022 de l'Université de Sherbrooke fut comparer au réseau de type petit monde pour voir si les caractéristique d'un réseau de collaboration peut être considéré comme un réseau de petit monde. L'utilisation de données recueilli sur 193 étudiants concernant leur lien les uns par rapport aux autres ont servis à faire un réseaux de collaborations. Les analyses effectuées sur ce réseau furent l'analyse de la corrélation entre la centralité et le nombre de lien des étudiant et le calcul du 'Bacon number'd'un des étudiants pris au hazard. Ces analyses ont montré une corrélation non significative de la centralité et du nombre de liens et un 'Bacon number' se situant entre 2 et 4. Cependant, les réseaux de type petit monde devrait avoir une corrélation entre leur centralité et leur nombre de liens et un 'Bacon number' de 6 et moins. Donc ce réseau de collaboration n'a pas toutes les caractéristiques étudiées dans cette article correspondant aux carractéristiques des réseaux de type petit monde. 
+  Dans cet article, le réseau de collaboration des étudiants du cours BIO500 à l'hiver 2022 de l'Université de Sherbrooke fut comparé au réseau de type petit monde pour voir si les caractéristique d'un réseau de collaboration peut être considéré comme un réseau de petit monde. L'utilisation de données recueilli sur 193 étudiants concernant leur lien les uns par rapport aux autres ont servis à faire un réseaux de collaborations. Les analyses effectuées sur ce réseau furent l'analyse de la corrélation entre la centralité et le nombre de lien des étudiant et le calcul du 'Bacon number'd'un des étudiants pris au hazard. Ces analyses ont montré une corrélation non significative de la centralité et du nombre de liens et un 'Bacon number' se situant entre 2 et 4. Cependant, les réseaux de type petit monde devrait avoir une corrélation entre leur centralité et leur nombre de liens et un 'Bacon number' de 6 et moins. Donc ce réseau de collaboration n'a pas toutes les caractéristiques étudiées dans cette article correspondant aux carractéristiques des réseaux de type petit monde. 
 
 keywords:
   - Bacon number
@@ -29,7 +29,7 @@ keywords:
   - Petits mondes
 
 ## must be one of: pnasresearcharticle (usual two-column layout), pnasmathematics (one column layout), or pnasinvited (invited submissions only)
-pnas_type: pnasresearcharticle.sty
+pnas_type: pnasresearcharticle
 
 bibliography: pnas-sample.bib
 csl: pnas.csl
@@ -37,7 +37,7 @@ csl: pnas.csl
 ## change to true to add optional line numbering
 lineno: false
 
-#output: rticles::pnas_article
+output: rticles::pnas_article
 ---
 
 # Introduction
@@ -50,34 +50,30 @@ Nous avons tout d'abord récolté les données des 193 étudiant(e)s relié(e)s 
 
 # Résultats
 
-![Figure 1. Réseau de collaboration](%22../results/reseau.pdf%22)
+![Réseau de collaboration \label{fig:plot1}](../results/reseau.pdf){width=50% height=40%}
 
-La figure 1 montre le réseau de collaborations, soit la position des étudiants en fonction du nombre de liens les un par rapport aux autres. On observe les points, représentant les étudiants, relié par leurs collaborations avec les autre points entre eux. Dans cette figure, on retrouve des points plus gros plus au centre de la figure représentant les étudants ayant le plus de collaborations et des points plus petits vers l'extérieur de la figure représentant les étudiant ayant moins de collaboration.
+La figure \ref{fig:plot1} montre le réseau de collaborations, soit la position des étudiants en fonction du nombre de liens les un par rapport aux autres. On observe les points, représentant les étudiants, relié par leurs collaborations avec les autre points entre eux. Dans cette figure, on retrouve des points plus gros plus au centre de la figure représentant les étudants ayant le plus de collaborations et des points plus petits vers l'extérieur de la figure représentant les étudiant ayant moins de collaboration.
 
-![Figure 2. Relation entre la centralité et le nombre de lien](%22../results/centralite.pdf%22)
+![Relation entre la centralité et le nombre de lien \label{fig:plot2}](../results/centralite.pdf){width=50% height=40%}
 
-La figure 2 représente la corrélation entre la centralité et le nombre de lien entre les étudiants. La corrélation effectuée pour voir le lien entre ces deux facteurs n'est pas significative, car la corrélation linéaire obtient une valeur de P de 0,2493 (P\>0.05).
+La figure \ref{fig:plot2} représente la corrélation entre la centralité et le nombre de lien entre les étudiants. La corrélation effectuée pour voir le lien entre ces deux facteurs n'est pas significative, car la corrélation linéaire obtient une valeur de P de 0,2493 (P\>0.05).
 
-![Figure 3. Degré de séparation d'Élisabeth Roy](%22../results/bacon.pdf%22)
+![Degré de séparation d'Élisabeth Roy \label{fig:plot3}](../results/bacon.pdf){width=50% height=40%}
 
-La figure 3 représente le degré de séparation des étudiants par rapport à l'étudiante Élisabeth Roy. On peut voir que la majorité des étudiants ont une distance collaborative entre 2 et 4 degrés de séparation avec Élisabeth Roy.
+La figure \ref{fig:plot3} représente le degré de séparation des étudiants par rapport à l'étudiante Élisabeth Roy. On peut voir que la majorité des étudiants ont une distance collaborative entre 2 et 4 degrés de séparation avec Élisabeth Roy.
 
 # Discussion
 
-Le réseau que nous avons obtenu à la Figure 1 peut être considéré comme un réseau de petit monde pour plusieurs raisons. Ce type de réseau, dont l'exemple parfait est les réseaux sociaux, repose principalement sur deux caractéristiques. D'abord, la distance moyenne entre toutes les paires de nœuds d'un réseau de petit monde est faible @watts_collective_1998. Cela est un aspect présent chez les réseaux aléatoires, réseaux générés par un processus aléatoire. Plus précisément, le degré de séparation moyens entre les individus doit être aux alentours de six @watts_collective_1998. Cette constatation, démontrée par le sociologue Stanley Milgram, semble concorder avec notre réseau, dans lequel on peut voir que les étudiants sont tous à quelques liens seulement des autres étudiants. Pour un peu de perspective, Facebook a, en 2011, rectifié le nombre de liens entre ses 2 milliards d'utilisateurs : cette distance médiane est passé de six à seulement quatre \@10.1145/2380718.2380723. Ensuite, pour qu'un réseau soit considéré comme un petit monde, il faut qu'il contienne un niveau de regroupement (clustering) local élevé, ce qui signifie que les nœuds sont généralement très connectés à leurs voisins immédiats @watts_collective_1998. Cette caractéristique n'est pas du tout présente chez les réseaux aléatoires. On peut également observer cette caractéristique sur notre réseau, principalement au centre, où l'on trouve des points plus larges, signifiant qu'ils sont davantage connectés à leurs voisins. Ces deux propriétés caractérisant les réseaux de petits mondes sont davantage détaillées dans les prochaines sections.
+Le réseau que nous avons obtenu à la Figure \ref{fig:plot1} peut être considéré comme un réseau de petit monde pour plusieurs raisons. Ce type de réseau, dont l'exemple parfait est les réseaux sociaux, repose principalement sur deux caractéristiques. D'abord, la distance moyenne entre toutes les paires de nœuds d'un réseau de petit monde est faible @watts_collective_1998. Cela est un aspect présent chez les réseaux aléatoires, réseaux générés par un processus aléatoire. Plus précisément, le degré de séparation moyens entre les individus doit être aux alentours de six @watts_collective_1998. Cette constatation, démontrée par le sociologue Stanley Milgram, semble concorder avec notre réseau, dans lequel on peut voir que les étudiants sont tous à quelques liens seulement des autres étudiants. Pour un peu de perspective, Facebook a, en 2011, rectifié le nombre de liens entre ses 2 milliards d'utilisateurs : cette distance médiane est passé de six à seulement quatre @10.1145/2380718.2380723. Ensuite, pour qu'un réseau soit considéré comme un petit monde, il faut qu'il contienne un niveau de regroupement (clustering) local élevé, ce qui signifie que les nœuds sont généralement très connectés à leurs voisins immédiats @watts_collective_1998. Cette caractéristique n'est pas du tout présente chez les réseaux aléatoires. On peut également observer cette caractéristique sur notre réseau, principalement au centre, où l'on trouve des points plus larges, signifiant qu'ils sont davantage connectés à leurs voisins. Ces deux propriétés caractérisant les réseaux de petits mondes sont davantage détaillées dans les prochaines sections.
 
-La Figure 2 indique le nombre de lien par des étudiants rapport à leur centralité dans un réseau de type petit monde. Comme les réseaux de petits monde sont des réseaux où chacun des noeuds sont reliés les un avec les autres avec, dans certains cas, des noeuds intermédiaires pour permettre cette connection @uzzi2007small. Le degrée de centralité est le nombre de liens relier à un noeud qui peut être traduit comme étant une mesure d'influence direct d'un noeud @borgatti2005centrality. Ainsi, les noeuds intermédiaires ayant plus de liens sont les plus influants. Cependant, dans notre réseau, cette corrélation n'est pas significative. Il y a une centralité plus forte chez les étudiant ayant une faible quantité de lien. Ainsi, la corrélation entre la centralité et le nombre de lien n'est pas la même que celle retrouvé dans un réseau de type petit monde. Par contre, plusieurs relations existe par rapport à la mesure de centralité. Faire l'étude de ses différent rapports pourrait aider à comprendre la centralité obtenu dans notre figure.
+La Figure \ref{fig:plot2} indique le nombre de lien par des étudiants rapport à leur centralité dans un réseau de type petit monde. Comme les réseaux de petits monde sont des réseaux où chacun des noeuds sont reliés les un avec les autres avec, dans certains cas, des noeuds intermédiaires pour permettre cette connection @uzzi2007small. Le degrée de centralité est le nombre de liens relier à un noeud qui peut être traduit comme étant une mesure d'influence direct d'un noeud @borgatti2005centrality. Ainsi, les noeuds intermédiaires ayant plus de liens sont les plus influants. Cependant, dans notre réseau, cette corrélation n'est pas significative. Il y a une centralité plus forte chez les étudiant ayant une faible quantité de lien. Ainsi, la corrélation entre la centralité et le nombre de lien n'est pas la même que celle retrouvé dans un réseau de type petit monde. Par contre, plusieurs relations existe par rapport à la mesure de centralité. Faire l'étude de ses différent rapports pourrait aider à comprendre la centralité obtenu dans notre figure.
 
-La Figure 3 nous indique le nombre de nœuds séparant Élisabeth Roy des autres étudiant(e)s. Ce nombre varie entre 1 et 4, la majorité des étudiants ayant un degré de séparation entre 2 et 4 avec Élisabeth Roy. Cette mesure se réfère directement au Bacon number ou au Erdös number, basés tout deux sur le phénomène de petit monde. Ces deux valeurs correspondent à la distance collaborative, d'un côté entre Kevin Bacon et d'autres acteurs/actrices ayant collaboré dans des films, et de l'autre entre le mathématicien Paul Erdos et d'autres auteurs/autrices ayant participé à l'écriture d'articles académiques @collins1998s. Selon le phénomène de petit monde, chaque personne aurait un degré de séparation avec une autre personne de six maximum, c'est-à-dire que deux personnes seraient liées par l'entremise de six personnes maximum. Cela concorde donc avec le résultat que nous avons obtenu à la Figure 3, soit qu'il y a 4 personnes au maximum séparant Élisabeth Roy des autres étudiant(e)s. Toutefois, cette valeur ne prend en compte qu'une seule étudiante. Il serait donc intéressant de faire la moyenne de ce même calcul pour tous les étudiants afin de voir le degré de séparation moyen entre les individus de notre réseau.
+La Figure \ref{fig:plot3} nous indique le nombre de nœuds séparant Élisabeth Roy des autres étudiant(e)s. Ce nombre varie entre 1 et 4, la majorité des étudiants ayant un degré de séparation entre 2 et 4 avec Élisabeth Roy. Cette mesure se réfère directement au Bacon number ou au Erdös number, basés tout deux sur le phénomène de petit monde. Ces deux valeurs correspondent à la distance collaborative, d'un côté entre Kevin Bacon et d'autres acteurs/actrices ayant collaboré dans des films, et de l'autre entre le mathématicien Paul Erdos et d'autres auteurs/autrices ayant participé à l'écriture d'articles académiques @collins1998s. Selon le phénomène de petit monde, chaque personne aurait un degré de séparation avec une autre personne de six maximum, c'est-à-dire que deux personnes seraient liées par l'entremise de six personnes maximum. Cela concorde donc avec le résultat que nous avons obtenu à la Figure \ref{fig:plot3}, soit qu'il y a 4 personnes au maximum séparant Élisabeth Roy des autres étudiant(e)s. Toutefois, cette valeur ne prend en compte qu'une seule étudiante. Il serait donc intéressant de faire la moyenne de ce même calcul pour tous les étudiants afin de voir le degré de séparation moyen entre les individus de notre réseau.
 
 # Conclusion
 
 Le but de ce travail était d'établir si le réseau de collaboration des étudiants du cours de BIO500 de l'Université de Sherbrooke à l'hiver 2022 concordait avec les caractéristiques d'un réseau de petit monde. Pour ce faire, une figure représentant le réseau de collaboration des étudiant entre eux fut produite. Cette figure démontrait une certaine centralité au niveau des étudiants ayant un nombre de lien plus fort par rapport à ceux ayant un nombre de lien plus faible. La corrélation entre le nombre de liens par étudiant et leur centralité dans une figure n'étant, cependant, pas significative. Par contre, le degré de séparation, calculé sur un étudiant pris au hazard, correspond au nombre de degré normalement retrouvé dans un réseau de petit monde. Il n'est donc pas possible de dire que le réseau de collaboration des étudiants du cours de BIO500 concorde avec toutes les caractéristiques d'un réseau de petit monde. Cepandant, des analyses plus poussés pourraient permettre de mieux comparer ces types de réseau.
 
 \newpage
+# Bibliographie {-}
 
-# Bibliographie {.unnumbered}
-
-Uzzi, B., Amaral, L. A., & Reed‐Tsochas, F. (2007). Small‐world networks and management science research: A review. European Management Review, 4(2), 77-91.
-
-Borgatti, S. P. (2005). Centrality and network flow. Social networks, 27(1), 55-71.
